# TestNitin

./: PROMPTS.md  README.md  SAMPLE_OUTPUTS.md  SPEC.md  TASKS.md
NFP/: .coverage  .gitignore  build_phase4.py  create_phase3.py  create_tests.py  generate_all.py  generate_market_price.py  pyproject.toml  scratch_create.py  setup_phase1.py
NFP/reference-data/: account_types.json  activity_types.json  asset_types.json  countries.json  currencies.json  event_types.json
NFP/reference-data/tax_rules/: india_tax_rules.yaml
NFP/src/nfp/: __init__.py
NFP/src/nfp/core/: clock.py  date_range.py  exceptions.py  exchange_rate.py  identifier.py  metadata.py  money.py  quantity.py
NFP/src/nfp/domain/: __init__.py  asset.py  business_activity.py  corporate_action.py  evidence.py  financial_account.py  financial_event.py  institution.py  ledger.py  lot.py  market_price.py  ownership.py  person.py  reference_data.py
NFP/src/nfp/events/: domain_events.py  event_bus.py
NFP/src/nfp/exchange/: manual_provider.py  provider.py
NFP/src/nfp/imports/: base.py  generic_csv.py  manual_entry.py  zerodha_parser.py
NFP/src/nfp/projections/: capital_gains.py  cash_flow.py  engine.py  holding.py  income.py
NFP/src/nfp/repositories/: account_repo.py  activity_repo.py  asset_repo.py  base.py  corporate_action_repo.py  event_repo.py  (+6 more)
NFP/tests/: conftest.py
NFP/tests/golden/: test_g05_fd_maturity.py  test_g06_builder_payments.py  test_g07_loan_emi.py  test_g08_capital_gains.py  test_g09_reversal_correction.py  test_g10_multi_currency.py  test_g11_stock_split.py  test_g12_mf_switch.py
(+53 files in other folders)
