[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfp"
version = "0.1.0"
description = "NFP — Nitin Financial Platform: Personal Financial Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "NFP" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/nfp"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/nfp --cov-report=term-missing"

[tool.coverage.run]
source = ["src/nfp"]
omit = ["*/tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/nfp"]
